Name: graphui
cabal-Version: >= 1.2
Description:
        A visual graph editor, with automatic layout
Version: 0.1
Stability: experimental
Synopsis: A visual graph editor
homepage: http://www.ee.bgu.ac.il/~noamle/graphui/design.html
License: BSD3
Category: Graphics
Author: Noam Lewis
Maintainer: lenoam@gmail.com
Build-Type: Simple
Build-Depends: base, Yampa >= 0.9.2, graphics-drawingcombinators >= 0.43, containers, fgl

Library
  hs-source-dirs:  src
  build-Depends: base, Yampa >= 0.9.2
  ghc-options : -O2 -Wall 
  exposed-modules: Math.Bezier

executable graphui
  hs-source-dirs:  src
  ghc-options : -O2 -Wall 
  build-Depends: base, Yampa >= 0.9.2, graphics-drawingcombinators >= 0.43, SDL, SDL-ttf, SDL-image, OpenGL, containers, fgl
  main-is: Main.hs
  Extensions: Arrows



