Name: graphui
cabal-Version: >= 1.2
Description:
        A visual graph editor, with automatic layout
Version: 0.1
Stability: experimental
Synopsis: A visual graph editor
homepage: http://www.ee.bgu.ac.il/~noamle/graphui/design.html
License: BSD3
Category: Graphics
Author: Noam Lewis
Maintainer: lenoam@gmail.com
Build-Type: Simple

Library
  hs-source-dirs:  src
  Build-Depends: base >= 4, Yampa >= 0.9.2, data-memocombinators
  ghc-options : -O2 -Wall 
  exposed-modules: Math.Bezier Math.Binomial Math.Vector2

executable graphui
  hs-source-dirs:  src
  ghc-options : -O2 -Wall
  Build-Depends: base >= 4, Yampa >= 0.9.2, graphics-drawingcombinators >= 1.2.1, SDL, SDL-image, OpenGL, containers, fgl, graphviz, fclabels, text
  main-is: Main.hs
  Extensions: Arrows
  Ghc-Prof-Options:  -prof -auto-all



